Add rate limiting and captcha protections to deck uploads

--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,15 @@ DB_NAME=alias
 # Optional moderation token required for /api/decks?status=pending and POST /api/decks/moderate
 # Leave unset to publish uploads immediately without moderation.
 # DECK_ADMIN_TOKEN=super-secret-token
+
+# Rate limiting for deck uploads (set limit to 0 to disable)
+DECK_UPLOAD_RATE_LIMIT=10
+DECK_UPLOAD_RATE_WINDOW_SECONDS=3600
+
+# Upstash Redis configuration (optional; required for distributed limits)
+# UPSTASH_REDIS_REST_URL=https://...
+# UPSTASH_REDIS_REST_TOKEN=...
+
+# hCaptcha keys (optional; omit to disable the CAPTCHA widget)
+# HCAPTCHA_SECRET_KEY=0x0000000000000000000000000000000000000000
+# NEXT_PUBLIC_HCAPTCHA_SITE_KEY=10000000-ffff-ffff-ffff-000000000001
