Add GitHub-based admin auth

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,12 @@ DB_USER=alias
 DB_PASSWORD=alias
 DB_NAME=alias
 
-# Optional moderation token required for /api/decks?status=pending and POST /api/decks/moderate
+# GitHub OAuth app credentials used for moderator sign-in.
+# Generate AUTH_SECRET with: openssl rand -base64 32
+# GITHUB_ID=
+# GITHUB_SECRET=
+# AUTH_SECRET=
+
+# Comma-separated GitHub usernames that should have moderation access.
 # Leave unset to publish uploads immediately without moderation.
-# DECK_ADMIN_TOKEN=super-secret-token
+# DECK_ADMIN_GITHUB_LOGINS=octocat,hubot
