--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.544.0",
     "mysql2": "^3.15.0",
     "next": "15.5.3",
+    "next-auth": "^4.24.11",
     "next-intl": "^4.3.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
