--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@vitest/coverage-v8": "^2.1.8",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
+    "@next/eslint-plugin-next": "15.5.3",
     "eslint-plugin-react-hooks": "^5.2.0",
     "tailwindcss": "^4",
     "typescript": "^5",
