chore: configure full Docker setup with MinIO and Valkey
Update .env.example with local MinIO and Valkey settings, and add README section for complete self-contained Docker environment including object storage and caching.

--- a/.env.example
+++ b/.env.example
@@ -11,21 +11,20 @@ DB_USER=alias
 DB_PASSWORD=alias
 DB_NAME=alias
 
-
 # Object storage (choose s3/r2 or supabase)
 DECK_STORAGE_DRIVER=s3
 DECK_STORAGE_BUCKET=alias-decks
-DECK_STORAGE_PREFIX=decks
-DECK_STORAGE_PUBLIC_BASE_URL=https://cdn.example.com
+DECK_STORAGE_PREFIX=alias-decks
+DECK_STORAGE_PUBLIC_BASE_URL=http://localhost:9000/alias-decks
 
 # S3 / R2 credentials (required when DECK_STORAGE_DRIVER is s3 or r2)
-DECK_STORAGE_S3_REGION=ru-west
-DECK_STORAGE_S3_ACCESS_KEY_ID=super_secret_name
-DECK_STORAGE_S3_SECRET_ACCESS_KEY=super_secret_key
+DECK_STORAGE_S3_REGION=us-east-1
+DECK_STORAGE_S3_ACCESS_KEY_ID=minioadmin
+DECK_STORAGE_S3_SECRET_ACCESS_KEY=miniopass
 # Optional endpoint for R2 or other S3-compatible hosts
-DECK_STORAGE_S3_ENDPOINT=https://minio-api.dnakov.ooo
+DECK_STORAGE_S3_ENDPOINT=http://minio:9000
 # Uncomment to force path-style requests instead of virtual-hosted style
-# DECK_STORAGE_S3_FORCE_PATH_STYLE=true
+DECK_STORAGE_S3_FORCE_PATH_STYLE=true
 
 # Supabase Storage (required when DECK_STORAGE_DRIVER is supabase)
 # DECK_STORAGE_SUPABASE_URL=https://project.supabase.co
@@ -47,15 +46,14 @@ DECK_UPLOAD_RATE_LIMIT=10
 DECK_UPLOAD_RATE_WINDOW_SECONDS=3600
 
 # Redis configuration (optional; required for distributed limits)
-# REDIS_URL=redis://default:redis@redis:6379
-# REDIS_HOST=redis
-# REDIS_PORT=6379
-# REDIS_USER=default
-# REDIS_PASSWORD=redis
-# REDIS_USER_PASSWORD=redis
-# REDIS_PREFIX=aliassoss
+REDIS_URL=redis://default:valkeypass@valkey:6379
+REDIS_HOST=valkey
+REDIS_PORT=6379
+REDIS_USER=default
+REDIS_PASSWORD=valkeypass
+REDIS_USER_PASSWORD=valkeypass
+REDIS_PREFIX=aliassoss
 
 # hCaptcha keys (optional; omit to disable the CAPTCHA widget)
 # HCAPTCHA_SECRET_KEY=0x0000000000000000000000000000000000000000
 # NEXT_PUBLIC_HCAPTCHA_SITE_KEY=10000000-ffff-ffff-ffff-000000000001
-
