chore: rebrand alias references to alioss

--- a/.env.example
+++ b/.env.example
@@ -2,20 +2,20 @@
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 
 # Automatically provided by Vercel deployments. Uncomment if deploying elsewhere.
-# VERCEL_URL=alias-game-site.vercel.app
+# VERCEL_URL=alioss-game-site.vercel.app
 
 # MariaDB connection (set DATABASE_URL instead if you prefer a DSN)
 DB_HOST=db
 DB_PORT=3306
-DB_USER=alias
-DB_PASSWORD=alias
-DB_NAME=alias
+DB_USER=alioss
+DB_PASSWORD=alioss
+DB_NAME=alioss
 
 # Object storage (choose s3/r2 or supabase)
 DECK_STORAGE_DRIVER=s3
-DECK_STORAGE_BUCKET=alias-decks
-DECK_STORAGE_PREFIX=alias-decks
-DECK_STORAGE_PUBLIC_BASE_URL=http://localhost:9000/alias-decks
+DECK_STORAGE_BUCKET=alioss-decks
+DECK_STORAGE_PREFIX=alioss-decks
+DECK_STORAGE_PUBLIC_BASE_URL=http://localhost:9000/alioss-decks
 
 # S3 / R2 credentials (required when DECK_STORAGE_DRIVER is s3 or r2)
 DECK_STORAGE_S3_REGION=us-east-1
@@ -52,7 +52,7 @@ REDIS_PORT=6379
 REDIS_USER=default
 REDIS_PASSWORD=valkeypass
 REDIS_USER_PASSWORD=valkeypass
-REDIS_PREFIX=aliassoss
+REDIS_PREFIX=aliossoss
 
 # hCaptcha keys (optional; omit to disable the CAPTCHA widget)
 # HCAPTCHA_SECRET_KEY=0x0000000000000000000000000000000000000000
