--- a/.env.example
+++ b/.env.example
@@ -52,7 +52,7 @@ REDIS_PORT=6379
 REDIS_USER=default
 REDIS_PASSWORD=valkeypass
 REDIS_USER_PASSWORD=valkeypass
-REDIS_PREFIX=aliossoss
+REDIS_PREFIX=alioss
 
 # hCaptcha keys (optional; omit to disable the CAPTCHA widget)
 # HCAPTCHA_SECRET_KEY=0x0000000000000000000000000000000000000000
