--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    container_name: aliossoss
+    container_name: alioss
     env_file:
       - .env
     user: root
