--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
 
 # Automatically provided by Vercel deployments. Uncomment if deploying elsewhere.
-# VERCEL_URL=alioss-game-site.vercel.app
+# VERCEL_URL=alioss-site.vercel.app
 
 # MariaDB connection (set DATABASE_URL instead if you prefer a DSN)
 DB_HOST=db
