--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "15.5.3",
     "next-auth": "^4.24.11",
     "next-intl": "^4.3.9",
+    "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
